src/test/ui/span/issue-24895-copy-clone-dropck.stderr
error[E0597]: `d1` does not live long enough
  --> $DIR/issue-24895-copy-clone-dropck.rs:37:15
   |
37 |     d2 = D(S(&d1, "inner"), "d2");
   |               ^^ borrowed value does not live long enough
38 | }
   | - `d1` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to previous error

